--- a/geo.html
+++ b/geo.html
@@ -60,7 +60,7 @@
 
 				    // info window
 				    var infoWindow = new google.maps.InfoWindow();
-				    infoWindow.setContent( 'You are here' );
+				    infoWindow.setContent( 'You are detected! Terminator was been sent to you!' );
 				    infoWindow.setPosition( location );
 				    infoWindow.open( map );
 
