--- a/validator/index.html
+++ b/validator/index.html
@@ -79,36 +79,36 @@
 				<div class="control-group">
 					<label class="control-label" for="uname">User name: </label>
 					<div class="controls">
-						<input type="input" class="" name="uname" id="uname" value="" placeholder="" />
+						<input type="input" class="form-control" name="uname" id="uname" value="" placeholder="" />
 					</div>
 				</div>
 				<div class="control-group">
 					<label class="control-label" for="fname">First name: </label>
 					<div class="controls">
-						<input type="input" name="fname" id="fname" value="" />
+						<input type="input" class="form-control" name="fname" id="fname" value="" />
 					</div>
 				</div>
 				<div class="control-group">
 					<label class="control-label" for="password">Password: </label>
 					<div class="controls">
-						<input type="password" name="password" id="password" value="" />
+						<input type="password" class="form-control" name="password" id="password" value="" />
 					</div>
 				</div>
 				<div class="control-group">
 					<label class="control-label" for="repassword">Retype password: </label>
 					<div class="controls">
-						<input type="password" name="repassword" id="repassword" value="" />
+						<input type="password" class="form-control" name="repassword" id="repassword" value="" />
 					</div>
 				</div>
 				<div class="control-group">
 					<label class="control-label" for="email">E-mail: </label>
 					<div class="controls">
-						<input type="input" name="email" id="email" value="" />
+						<input type="input" class="form-control" name="email" id="email" value="" />
 					</div>
 				</div>	
 				<div class="control-group">
 					<label class="control-label" for="age">Age: </label>
-					<select class="span2" id="age">
+					<select class="form-control span2" id="age">
 						<option value="">less 13</option>
 						<option value="">13-15</option>
 						<option value="">15-18</option>
