--- a/validator/index.html
+++ b/validator/index.html
@@ -69,7 +69,7 @@
 <div class="wrapper">
 
 	<header class="header">
-		<strong>Header:</strong> Using jQuery Validate plugin and Bootstrap
+		<strong>Header:</strong> Using <a href="http://jquery.com/">jQuery</a> <a href="http://jqueryvalidation.org/">Validate</a> plugin and Bootstrap
 	</header><!-- .header-->
 
 	<main class="content">
