--- a/validator/index.html
+++ b/validator/index.html
@@ -8,21 +8,7 @@
 	<meta name="description" content="" />
 	<link href="../css/style.css" rel="stylesheet" />
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-	<style type="text/css">
-		#registration {
-			margin: 30px auto 80px;
-			width: 500px;
-		}
-		fieldset {
-			border: 1px solid #ccc;
-			padding: 10px;
-			border-radius: 5px;
-		}
-		legend {
-			margin: auto 5px;
-			font-weight: bold;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="../css/pr-validator.css" />
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
@@ -73,55 +59,96 @@
 	</header><!-- .header-->
 
 	<main class="content">
-		<form action="" class="form-horizontal" method="post" id="registration">
-			<fieldset>
-				<legend>User data</legend>
-				<div class="control-group">
-					<label class="control-label" for="uname">User name: </label>
-					<div class="controls">
-						<input type="input" class="form-control" name="uname" id="uname" value="" placeholder="" />
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="fname">First name: </label>
-					<div class="controls">
-						<input type="input" class="form-control" name="fname" id="fname" value="" />
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="password">Password: </label>
-					<div class="controls">
-						<input type="password" class="form-control" name="password" id="password" value="" />
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="repassword">Retype password: </label>
-					<div class="controls">
-						<input type="password" class="form-control" name="repassword" id="repassword" value="" />
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="email">E-mail: </label>
-					<div class="controls">
-						<input type="input" class="form-control" name="email" id="email" value="" />
-					</div>
-				</div>	
-				<div class="control-group">
-					<label class="control-label" for="age">Age: </label>
-					<select class="form-control span2" id="age">
-						<option value="">less 13</option>
-						<option value="">13-15</option>
-						<option value="">15-18</option>
-						<option value="">18-21</option>
-						<option value="">21-24</option>
-						<option value="">24-17</option>
-					</select>
-				</div>							
-				<div class="control-group">
-					<input type="submit" class="btn btn-primary" name="register" value="Register" >
-				</div>								
-			</fieldset>
-		</form>
+
+		<div class="row validator-body">
+
+			<!-- First column -->
+			<div class="col-md-6 td">
+				<form action="" class="form-horizontal" method="post" id="registration">
+					<fieldset>
+						<legend>User data</legend>
+						<div class="control-group">
+							<label class="control-label" for="uname">User name: </label>
+							<div class="controls">
+								<input type="input" class="form-control" name="uname" id="uname" value="" placeholder="" />
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="fname">First name: </label>
+							<div class="controls">
+								<input type="input" class="form-control" name="fname" id="fname" value="" />
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="password">Password: </label>
+							<div class="controls">
+								<input type="password" class="form-control" name="password" id="password" value="" />
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="repassword">Retype password: </label>
+							<div class="controls">
+								<input type="password" class="form-control" name="repassword" id="repassword" value="" />
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="email">E-mail: </label>
+							<div class="controls">
+								<input type="input" class="form-control" name="email" id="email" value="" />
+							</div>
+						</div>	
+						<div class="control-group">
+							<label class="control-label" for="age">Age: </label>
+							<select class="form-control span2" id="age">
+								<option value="">less 13</option>
+								<option value="">13-15</option>
+								<option value="">15-18</option>
+								<option value="">18-21</option>
+								<option value="">21-24</option>
+								<option value="">24-17</option>
+							</select>
+						</div>							
+						<div class="control-group">
+							<input type="submit" class="btn btn-primary" name="register" value="Register" >
+						</div>								
+					</fieldset>
+				</form>
+			</div>
+
+			<!-- Second column -->
+			<div class="col-md-6 td">
+
+				<table id="" class="statistic-data" border="0" cellspacing="0" cellpadding="0">
+					<tr>
+						<td>1</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>2</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>3</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>										
+				</table>
+
+			</div>
+
+		</div>
+		
 	</main><!-- .content -->
 
 	<footer class="footer">
